--- a/auctionapplication/pom.xml
+++ b/auctionapplication/pom.xml
@@ -3,10 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.Dat250</groupId>
+	
 	<artifactId>auctionapplication</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.0</version>
-	<name>Dat250 Tweet Advanced Maven Webapp</name>
+	<name>Dat250 Auction Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<!-- Needed to build web applications with request/response workflow -->
@@ -65,7 +66,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>Dat250TweetAdvanced</finalName>
+		<finalName>Dat250AuctionApplication</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
